src/objects/Apttus__DocumentVersionDetail__c.object
<CustomObject>
    <description>Holds the version details of a document</description>
    <fields>
        <fullName>Apttus__Action2__c</fullName>
        <description>The action which created the version</description>
        <inlineHelpText>The action which created the version</inlineHelpText>
        <label>Action</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Generate Agreement</fullName>
                </value>
                <value>
                    <fullName>Regenerate Agreement</fullName>
                </value>
                <value>
                    <fullName>Create Offline Agreement</fullName>
                </value>
                <value>
                    <fullName>Import Offline Agreement</fullName>
                </value>
                <value>
                    <fullName>Check In</fullName>
                </value>
                <value>
                    <fullName>Signed Document</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__Comment__c</fullName>
        <description>Comments</description>
        <inlineHelpText>Comments</inlineHelpText>
        <label>Comment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ContentId__c</fullName>
        <description>ID of the associated content</description>
        <externalId>true</externalId>
        <inlineHelpText>ID of the associated content</inlineHelpText>
        <label>Content</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__ContentVersionId__c</fullName>
        <description>Content Version Id to be populated in the case of file storage (Not used for attachment)</description>
        <externalId>true</externalId>
        <inlineHelpText>Content Version Id to be populated in the case of file storage (Not used for attachment)</inlineHelpText>
        <label>ContentVersion</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentAction__c</fullName>
        <formula>IF(Apttus__IsTransient__c == FALSE &amp;&amp; LOWER(RIGHT( Apttus__Title__c , 5)) = &apos;.docx&apos;, HYPERLINK(&quot;/apex/Apttus__OCCIntermediateView?agreementId=&quot; &amp; Apttus__DocumentVersionId__r.Apttus__AgreementId__c &amp; &quot;&amp;attachmentId=&quot; &amp; Apttus__ContentId__c &amp; &quot;&amp;isVersioned=&quot; &amp; IF( Apttus__DocumentVersionId__r.Apttus__AgreementId__r.Apttus__VersionAware__c, &quot;true&quot;, &quot;false&quot;) &amp; &quot;&amp;retId=&quot;&amp; Apttus__DocumentVersionId__c &amp; &quot;&amp;UserUITheme=&quot; &amp; IF( ($User.UITheme == &apos;Theme4d&apos; || $User.UITheme == &apos;Theme4u&apos;),&apos;lightning&apos;,&apos;classic&apos;) , IF(NOT(ISBLANK(Apttus__DocumentVersionId__r.Apttus__CheckoutById__c)) &amp;&amp; Apttus__DocumentVersionId__r.Apttus__CheckoutById__c &lt;&gt; $User.Id, $Label.Apttus__Open,$Label.Apttus__OpenAndEdit),&quot;_self&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Document Action</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__DocumentInfo__c</fullName>
        <description>Additional document information</description>
        <inlineHelpText>Additional document information</inlineHelpText>
        <label>Document Info</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Final</fullName>
                </value>
                <value>
                    <fullName>Clean</fullName>
                </value>
                <value>
                    <fullName>Redlines</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus__DocumentVersionId__c</fullName>
        <description>Lookup to the Document Version this record is part of</description>
        <inlineHelpText>Lookup to the Document Version this record is part of</inlineHelpText>
        <label>Document Version</label>
        <referenceTo>Apttus__DocumentVersion__c</referenceTo>
        <relationshipLabel>Document Version Details</relationshipLabel>
        <relationshipName>Document_Version_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Apttus__FileSize__c</fullName>
        <defaultValue>0</defaultValue>
        <description>File size of the associated content</description>
        <inlineHelpText>File size of the associated content</inlineHelpText>
        <label>File Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__FileType__c</fullName>
        <description>FileType of content id</description>
        <inlineHelpText>fileType of content id</inlineHelpText>
        <label>FileType</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__IsSentForManualSignature__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This flag is set to true for document send for signature manually.</description>
        <inlineHelpText>This flag is set to true for document send for signature manually.</inlineHelpText>
        <label>Is Sent for Manual Signature</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__IsTransient__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates a transient version. A new version is in transient state until the document is successfully attached to the version. Workflow rules should check this field to test for false before firing so that rules are not incorrectly fired when transient versions are created .</description>
        <inlineHelpText>Indicates a transient version. A new version is in transient state until the document is successfully attached to the version. Workflow rules should check this field to test for false before firing.</inlineHelpText>
        <label>Is Transient</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus__ParentDocumentVersionDetailId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to the parent document version id from where this version is derived</description>
        <inlineHelpText>Lookup to the parent document version id from where this version is derived</inlineHelpText>
        <label>Ancestor</label>
        <referenceTo>Apttus__DocumentVersionDetail__c</referenceTo>
        <relationshipLabel>Document Version Details</relationshipLabel>
        <relationshipName>Document_Version_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__PdfDocumentId__c</fullName>
        <description>Associated PDF Document Id</description>
        <inlineHelpText>Associated PDF Document Id</inlineHelpText>
        <label>PDF Document Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__PendingReviews__c</fullName>
        <description>Pending Reviews Count</description>
        <inlineHelpText>Count of Review Cycles Pending.</inlineHelpText>
        <label>Pending Reviews</label>
        <summaryFilterItems>
            <field>Apttus__ReviewCycle__c.Apttus__ReviewStatus__c</field>
            <operation>equals</operation>
            <value>In Progress, Not Started</value>
        </summaryFilterItems>
        <summaryForeignKey>Apttus__ReviewCycle__c.Apttus__OriginalDocumentVersionDetail__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Apttus__Tags__c</fullName>
        <description>Document tags</description>
        <inlineHelpText>Document tags</inlineHelpText>
        <label>Tags</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__TemplateVersionId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Template version that was used to generate this document</description>
        <inlineHelpText>Template version that was used to generate this document</inlineHelpText>
        <label>Template Version</label>
        <referenceTo>Apttus__TemplateVersion__c</referenceTo>
        <relationshipLabel>Document Version Details</relationshipLabel>
        <relationshipName>DocumentVersionDetails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus__Title__c</fullName>
        <description>The title of the document version</description>
        <inlineHelpText>The title of the document version</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus__TotalInsightScore__c</fullName>
        <description>Total Risk Score of Insights on a document</description>
        <inlineHelpText>Total Risk Score of Insights on a document</inlineHelpText>
        <label>Total Insight Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__VersionMajor__c</fullName>
        <description>Major version</description>
        <inlineHelpText>Major version</inlineHelpText>
        <label>Version Major</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__VersionMinor__c</fullName>
        <description>Minor version</description>
        <inlineHelpText>Minor version</inlineHelpText>
        <label>Version Minor</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__VersionRevision__c</fullName>
        <description>Revision version</description>
        <inlineHelpText>Revision version</inlineHelpText>
        <label>Version Revision</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus__View__c</fullName>
        <description>View the associated content</description>
        <formula>if(Apttus__IsTransient__c == FALSE , If(Apttus__FileType__c == &quot;GoogleDoc&quot;,HYPERLINK(Apttus__DocumentUrl__c,&quot;View&quot;),CASE(Apttus__FileType__c, &quot;ContentDocument&quot;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot; &amp; Apttus__ContentVersionId__c,&quot;View&quot;), HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Apttus__ContentId__c,&quot;View&quot;)) ),&quot;&quot; )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>View the associated content</inlineHelpText>
        <label>View</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title_Click_to_Download__c</fullName>
        <description>CLMCMA-15065: formula field to download the file</description>
        <formula>if(Apttus__IsTransient__c == FALSE , CASE(Apttus__FileType__c, &quot;ContentDocument&quot;, HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot; &amp; Apttus__ContentVersionId__c, Apttus__Title__c ), HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Apttus__ContentId__c, Apttus__Title__c)) ,&quot;&quot; )</formula>
        <label>Title (Click to Download)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>View__c</fullName>
        <description>CLM-MC-CLMCMA-19937 - This field helps in viewing associated document.</description>
        <formula>IF(AND(Apttus__FileType__c == &apos;ContentDocument&apos;, NOT(ISBLANK(Apttus__ContentVersionId__c))),  
HYPERLINK(&quot;/sfc/servlet.shepherd/version/download/&quot; &amp; Apttus__ContentVersionId__c,&quot;View&quot;), 
IF(NOT(ISBLANK(Apttus__ContentId__c)), HYPERLINK(&quot;/servlet/servlet.FileDownload?file=&quot; &amp; Apttus__ContentId__c,&quot;View&quot;), &apos;&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>View</label>
        <type>Text</type>
    </fields>
    <label>Document Version Detail</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Version Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>